--- a/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
@@ -17,90 +17,97 @@
     cuentaM.telMovil = cuenta.telMovil;
 }
 
-@using (Html.BeginForm("EditRegister", "Empleado", FormMethod.Post, new {model=cuentaM }))
-{
-    @Html.AntiForgeryToken()
+<style>
+    .contenedor {
+        border: 1px solid #080808;
+    }
+</style>
 
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true)
-        <h3>Datos de ingreso</h3><br>
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.TextBoxFor(model => model.Email, new {@class = "form-control", @placeholder = @cuentaM.Email, @Value = @cuentaM.Email })
-                @Html.ValidationMessageFor(model => model.Email)
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.TextBoxFor(model => model.nombre, new {@class = "form-control", @placeholder = @cuentaM.nombre, @Value = @cuentaM.nombre })
-                @Html.ValidationMessageFor(model => model.nombre)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.TextBoxFor(model => model.apellido, new {@class = "form-control", @placeholder = @cuentaM.apellido, @Value = @cuentaM.apellido })
-                @Html.ValidationMessageFor(model => model.apellido)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.TextBoxFor(model => model.direccion, new { @class = "form-control", @placeholder = @cuentaM.direccion, @Value = @cuentaM.direccion })
-                @Html.ValidationMessageFor(model => model.direccion)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.TextBoxFor(model => model.telefono, new { @class = "form-control", @placeholder = @cuentaM.telefono, @Value = @cuentaM.telefono })
-                @Html.ValidationMessageFor(model => model.telefono)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.TextBoxFor(model => model.telMovil, new { @class = "form-control", @placeholder = @cuentaM.telMovil, @Value = @cuentaM.telMovil })
-                @Html.ValidationMessageFor(model => model.telMovil)
-            </div>
-        </div>
-
-        <div class="row form-inline">
-            <div class="control-label col-md-2">
-                <label>Tipo de Documento</label>
-            </div>
-            <div class="control-label col-md-2">
-                @if ((int)cuenta.tipoDoc == 1) { 
-                    <input type="text" value="DNI" class="form-control" aria-describedby="dolares" readonly="true">
-                }
-                else
-                {
-                    <input type="text" value="Pasaporte" class="form-control" aria-describedby="dolares" readonly="true">
-                }                
-                    
-            </div>
-        </div>
+<div class="container-fluid">
+    <div class="col-md-5">
+        <ol class="breadcrumb">
+            <li class="active"><a href="@Url.Action("Index","Empleado")"> Mantenimiento de empleados</a></li>
+            <li>Editar empleado</li>
+        </ol>
+    </div>
+</div>
+<div class="container">
+    @using (Html.BeginForm("EditRegister", "Empleado", FormMethod.Post, new { model = cuentaM }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="col-md-8 col-md-offset-2 contenedor">
         <br>
-        <div class="row form-inline">
-            <div class="control-label col-md-2">
-                <label>Codigo Documento</label>
-            </div> 
-            <div class="control-label col-md-2">
-                <input type="text" value="@cuenta.codDoc" class="form-control" aria-describedby="dolares" readonly="true">
-            </div>
-        </div>
-        <br>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Editar" class="btn btn-primary" />
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true)
+                <div class="form-group">
+                    <div class="control-label col-md-3">
+                        <label>Tipo de Documento</label>
+                    </div>
+                    <div class="col-md-3">
+                        @if ((int)cuenta.tipoDoc == 1)
+                        {
+                            <input type="text" value="DNI" class="form-control" aria-describedby="dolares" readonly="true">
+                        }
+                        else
+                        {
+                            <input type="text" value="Pasaporte" class="form-control" aria-describedby="dolares" readonly="true">
+                        }
+                    </div>
+                    <div class="control-label col-md-2">
+                        <label>Núm. Doc</label>
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" value="@cuenta.codDoc" class="form-control" aria-describedby="dolares" readonly="true">
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(model => model.nombre, new { @class = "form-control", @placeholder = @cuentaM.nombre, @Value = @cuentaM.nombre })
+                        @Html.ValidationMessageFor(model => model.nombre)
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-3" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(model => model.apellido, new { @class = "form-control", @placeholder = @cuentaM.apellido, @Value = @cuentaM.apellido })
+                        @Html.ValidationMessageFor(model => model.apellido)
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-3" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(model => model.direccion, new { @class = "form-control", @placeholder = @cuentaM.direccion, @Value = @cuentaM.direccion })
+                        @Html.ValidationMessageFor(model => model.direccion)
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-3" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(model => model.telefono, new { @class = "form-control", @placeholder = @cuentaM.telefono, @Value = @cuentaM.telefono })
+                        @Html.ValidationMessageFor(model => model.telefono)
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-3" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(model => model.telMovil, new { @class = "form-control", @placeholder = @cuentaM.telMovil, @Value = @cuentaM.telMovil })
+                        @Html.ValidationMessageFor(model => model.telMovil)
+                    </div>
+                </div>                                
+                <div class="form-group">
+                    <center>
+                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span> Guardar cambios</button>
+                        <a href="@Url.Action("Index","Empleado")" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Cancelar</a>
+                    </center>
                 </div>
             </div>
         </div>
-}
+        
+    }
+</div>
+
