cambios de fecha

--- a/WebApplication4/WebApplication4/Views/Evento/Funciones.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Funciones.cshtml
@@ -43,8 +43,8 @@
                     <thead>
                         <tr>
                             <td>N°</td>
-                            <td>Fecha:</td>
-                            <td>Hora:</td>
+                            <td>Fecha</td>
+                            <td>Hora</td>
                             <td>¿Quitar?</td>
                         </tr>
                     </thead>
