--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -157,6 +157,7 @@
         @Scripts.Render("~/bundles/jqueryui")                
         @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
+        <script src="~/Scripts/script_fecha.js"></script>
     </body>
 </html>
 }
