--- a/WebApplication4/WebApplication4/Views/Evento/BloquesTiempoVenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/BloquesTiempoVenta.cshtml
@@ -46,12 +46,12 @@
                                 {
                                     for (var i = 0; i < listaResultados.Count; i++)
                                     {
-                                        string fechaInicio = String.Format("{0:d}", listaResultados[i].fechaInicio);
-                                        string fechaFin = String.Format("{0:d}", listaResultados[i].fechaFin);
-                                        <tr>
+                                        string fechaInicio = listaResultados[i].fechaInicio.ToString("yyyy-MM-dd");
+                                        string fechaFin = listaResultados[i].fechaFin.ToString("yyyy-MM-dd");
+                                        <tr id="@(i+1)">
                                             <td>@(i + 1)</td>
-                                            <td><input id="fechaIni" class="form-control" type="date" value="@fechaInicio" required></td>
-                                            <td><input id="fechaIni" class="form-control" type="date" value="@fechaFin" required></td>
+                                            <td><input id="fechaIni" class="form-control" type="date" value="@fechaInicio" readonly="readonly"></td>
+                                            <td><input id="fechaIni" class="form-control" type="date" value="@fechaFin" readonly="readonly"></td>
                                             <td style="text-align:center">
                                                 <input type="radio" name="groupBloquedeVenta" value="@(i+1)">
                                             </td>
